[package]
name = "log-stat"
version = "0.1.0"
authors = ["Fumiya Fujinaka <uzuna.kf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
failure= "0.1"
log = "0.4"
env_logger = "0.7.1"

[dependencies.chrono]
features = ["serde"]
version= "0.4"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false


[package.metadata.deb]
maintainer = "Fumiya Fujinaka <uzuna.kf@gmail.com>"
copyright = "2020, Fumiya Fujinaka <uzuna.kf@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """parse and stats journallog."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/logstat", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]